packages/components/src/components/Select/styles/select.module.scss
/* (c) Copyright Frontify Ltd., all rights reserved. */

@use '../../../utilities/sizeToken.module.scss';
@use '../../../utilities/focusStyle.module.scss';
@use '../../../utilities/transitions.module.scss';
@use '../../../utilities/mediaQuery.module.scss';
@use '../../../utilities/shadow.module.scss';

.root {
    position: relative;
    display: flex;
    align-items: stretch;
    text-align: start;

    font-family: var(--body-family-stack);
    font-weight: 400;
    font-size: var(--body-size-medium);

    min-width: 0;
    width: 100%;
    line-height: var(--body-size-medium-line-height);
    height: sizeToken.get(9);
    box-sizing: border-box;

    color: var(--text-color);
    background-color: var(--base-color);

    border-radius: var(--radius);
    border: var(--line-width) solid var(--line-color-strong);
    cursor: pointer;
    & {
        @include focusStyle.focus-outline;
        @include transitions.transition-colors;
    }

    &:hover {
        border-color: var(--line-color-x-strong);
    }

    &[data-show-focus-ring='false']:focus,
    &:has(input[data-show-focus-ring='false']:focus) {
        border-color: var(--line-color-xx-strong);
    }

    &:has(input:disabled),
    &[data-disabled='true'] {
        border-color: var(--line-color-weak);
        background-color: var(--box-disabled-color);
        color: var(--text-color-disabled);
        cursor: default;
    }

    &[data-status='success'] {
        border-color: var(--text-color-positive);
    }

    &[data-status='error'] {
        border-color: var(--text-color-negative);
    }

    &[data-empty='true'] {
        color: var(--text-color-x-weak);
    }

    &:has(input:placeholder-shown) {
        color: var(--text-color-x-weak);
    }
}

.selectedValue {
    width: 100%;
    background-color: transparent;
    padding-left: sizeToken.get(3);
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-top: auto;
    margin-bottom: auto;
    user-select: none;
}

.selectedValue:has(~ [data-name="left"]) {
    text-indent: sizeToken.get(3);
    padding-left: 0;
}

.input {
    width: 100%;
    background-color: transparent;
    display: flex;
    align-items: center;
    text-align: inherit;
    text-indent: sizeToken.get(3);
    outline: 2px solid transparent;
    outline-offset: 2px;
    border-radius: calc(var(--radius) - var(--line-width));
    white-space: nowrap;
    line-height: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}

.input,
.selectedValue {
    &::placeholder {
        color: var(--text-color-x-weak);
    }

    // Remove border-radius and text-indent/padding on the left if there’s a left-side slot
    &:has(~ div[data-name='left']) {
        text-indent: 0px;
        border-top-left-radius: 0px;
        border-bottom-left-radius: 0px;
    }

    // Remove border-radius and padding on the right if there’s a right-side slot
    &:has(~ .slot[data-side='right'], ~ .slot:not([data-side='right'])) {
        padding-right: 0;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }

    &:disabled {
        color: var(--text-color-disabled);
    }
    &:disabled ~ .slot {
        color: var(--text-color-disabled);
    }
}

.slot {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    cursor: text;
    gap: sizeToken.get(1.5);
    padding-left: sizeToken.get(3);
    padding-right: sizeToken.get(2);
    color: var(--text-color);

    // Left slot
    &[data-name='left'] {
        order: -1;
        margin-left: 0px;
        margin-right: 0px;
    }

    // Right slot
    &[data-name='right'] {
        order: 0;
        margin-left: 0px;
        margin-right: 0px;
        padding-right: sizeToken.get(3);

        &:has(~ div[data-name='clear']) {
            padding-right: 0;
        }
    }

    // Label slot
    &[data-name='label'] {
        display: flex;
        align-items: center;
        cursor: text;
        height: 100%;
        padding-left: sizeToken.get(3);
        padding-right: sizeToken.get(2);

        &:has(~ div[data-name='left']) {
            text-indent: 0px;
            padding-left: 0;
        }
    }
}

.clear {
    display: flex;
    height: 100%;
    width: fit-content;
    align-items: center;
    justify-content: center;
    padding: 0 sizeToken.get(3);
    color: var(--text-color-weak);

    &:hover {
        color: var(--text-color-weak-hover);
    }
}

.icons {
    display: flex;
    gap: sizeToken.get(1);
    padding: 0 sizeToken.get(1.5);
}

.caret {
    display: flex;
    height: 100%;
    width: sizeToken.get(4);
    align-items: center;
    justify-content: center;
    margin: 0 sizeToken.get(1);
    color: var(--text-color-weak);

    & {
        @include transitions.transition-transform;
    }

    &:hover {
        color: var(--text-color-weak-hover);
    }

    div[role='combobox'][aria-expanded='true'] &,
    button[aria-expanded='true'] & {
        transform: rotateX(180deg);
    }
}

.iconSuccess {
    height: 100%;
    margin: 0 sizeToken.get(1);
    color: var(--text-color-positive);
}

.iconError {
    height: 100%;
    margin: 0 sizeToken.get(1);
    color: var(--text-color-negative);
}

.menu {
    display: none;
    border-radius: var(--radius);
    background-color: var(--base-color);
    border: var(--line-width) solid var(--line-color);
    max-width: calc(100dvw - sizeToken.get(8));
    min-width: var(--radix-popover-trigger-width);
    overflow: auto;
    max-height: var(--radix-popover-content-available-height);
    color: var(--text-color);

    &:has(li[role='option']) {
        display: block;
    }

    & {
        @include shadow.shadow-lg;
        @include mediaQuery.sm {
            max-width: 500px;
        }
    }
}

.portal {
    z-index: 30;

    &[data-side='bottom'] {
        margin-top: sizeToken.get(2);
    }

    &[data-side='top'] {
        margin-bottom: sizeToken.get(2);
    }

    &[data-side='left'] {
        margin-right: sizeToken.get(2);
    }

    &[data-side='right'] {
        margin-left: sizeToken.get(2);
    }
}

.item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: sizeToken.get(2);
    padding: sizeToken.get(2) sizeToken.get(3);
    margin: sizeToken.get(0.5) sizeToken.get(2);
    border-radius: sizeToken.get(1);
    cursor: pointer;
    text-align: start;
    font-size: var(--body-size-medium);
    line-height: var(--body-size-medium-line-height);
    color: var(--text-color);
    outline-style: none;

    & {
        @include transitions.transition-colors;
    }

    &:first-child {
        margin-top: sizeToken.get(2);
    }

    &:last-child {
        margin-bottom: sizeToken.get(2);
    }

    &[data-highlighted='true'] {
        background-color: var(--box-neutral-color);
        color: var(--box-neutral-inverse-color-hover);
    }

    &[data-highlighted]:active {
        background-color: var(--box-neutral-color-hover);
        transition: none;
    }

    &[data-selected='true'] {
        .checkmarkIcon {
            display: block;
        }
    }

    .menu[data-has-interacted='false'] &[data-selected='true']:not(:hover),
    &[data-selected='true'][data-highlighted='false'] {
        background-color: var(--box-neutral-color-hover);
        color: var(--box-neutral-inverse-color-hover);
    }

    .itemValue {
        width: 100%;
        display: inline-block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

.checkmarkIcon {
    width: sizeToken.get(4);
    height: sizeToken.get(4);
    display: none;
}

.group {
    .item ~ & {
        border-top: var(--line-width) solid var(--line-color-strong);
    }
    &:has(+ .item, + .group) {
        border-bottom: var(--line-width) solid var(--line-color-strong);
    }
}

